# ledger

./: LICENSE  README.md  docker-compose.yml.dev  docker-compose.yml.prod
app/: Cargo.toml
app/ledger_app/: Cargo.toml
app/ledger_app/src/: api_response.rs  handler.rs  main.rs
app/ledger_app/src/handler/: account.rs  journal.rs  summary.rs
app/ledger_app/src/handler/journal/: bank.rs  buy.rs  from_prev.rs  journal_payload.rs  kessan.rs  sell.rs  soneki.rs  to_next.rs
app/ledger_db/: Cargo.toml
app/ledger_db/src/: account.rs  db.rs  lib.rs  summary.rs  transaction.rs
app/ledger_db/src/account/: account_type.rs  insert.rs  select.rs
app/ledger_db/src/transaction/: insert.rs  select.rs  transaction_type.rs
db/init/: 00_create_database.sql  01_create_table.sql  02_insert_account.sql
