[package]
name = "ledger_app"
version = "0.1.0"
edition = "2021"

[dependencies]
ledger_db = { path = "../ledger_db" }
thiserror = { workspace = true }
chrono = { workspace = true }
chrono-tz = { version = "0.10.1", features = [ "serde" ] }
rust_decimal = { workspace = true }
tokio = { workspace = true }
axum = "0.8.1"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"

