[package]
name = "ledger_db"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true }
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "rust_decimal" ] }
strum = "0.27"
strum_macros = "0.27"

